--- a/src/index.css
+++ b/src/index.css
@@ -95,11 +95,10 @@ header {
   justify-content: space-between;
   background-color: var(--bg-3);
   box-shadow: rgba(17, 12, 46, 0.15) 0 48px 100px 0;
-  padding: 15px 30px;
   box-sizing: border-box;
   margin-bottom: 5px;
   align-items: center;
-  max-height: 75px;
+  max-height: 45px;
   overflow-y: hidden;
 }
 
@@ -131,6 +130,7 @@ div.logo-container a {
   margin: 0 5px;
   color: var(--primary);
   font-weight: 600;
+  border-bottom: 2px solid var(--text);
 }
 
 .back-home {
@@ -209,7 +209,7 @@ div.logo-container a {
 #detail {
   min-height: 70vh;
   position: relative;
-  top: 75px;
+  top: 46px;
   margin-bottom: 0;
   background-color: var(--bg-2);
   background-position: 100%;
@@ -272,12 +272,12 @@ div.logo-container a {
 }
 
 .search form input[type="search"] {
-  padding: 1rem 3rem;
-  font-size: 1rem;
+  padding: .5rem 2rem;
+  font-size: .8rem;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6' fill='none' viewBox='0 0 24 24' stroke='%23999' stroke-width='2'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z' /%3E%3C/svg%3E");
   background-repeat: no-repeat;
-  background-position: 0.725rem 1.075rem;
-  background-size: 1.2rem;
+  background-position: 0.725rem .65rem;
+  background-size: .8rem;
   background-color: var(--bg-3);
 }
 
@@ -308,7 +308,7 @@ div.logo-container a {
 
 input[type="number"] {
   width: 75px;
-  font-size: 1rem;
+  font-size: .8rem;
   padding: 0.5rem 1rem;
   background-color: var(--secondary);
 }
@@ -414,7 +414,6 @@ footer span {
 
   #detail {
     position: relative;
-    top: 75px;
     overflow-y: hidden;
   }
 
@@ -423,7 +422,7 @@ footer span {
     flex-wrap: wrap;
     justify-content: space-evenly;
     min-height: 30vh;
-    padding-bottom: 6em;
+    padding-bottom: 2em;
   }
 
   .box-card,
