--- a/src/index.css
+++ b/src/index.css
@@ -272,12 +272,12 @@ div.logo-container a {
 }
 
 .search form input[type="search"] {
-  padding: .5rem 2rem;
-  font-size: .8rem;
+  padding: 0.5rem 2rem;
+  font-size: 0.8rem;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6' fill='none' viewBox='0 0 24 24' stroke='%23999' stroke-width='2'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z' /%3E%3C/svg%3E");
   background-repeat: no-repeat;
-  background-position: 0.725rem .65rem;
-  background-size: .8rem;
+  background-position: 0.725rem 0.65rem;
+  background-size: 0.8rem;
   background-color: var(--bg-3);
 }
 
@@ -308,7 +308,7 @@ div.logo-container a {
 
 input[type="number"] {
   width: 75px;
-  font-size: .8rem;
+  font-size: 0.8rem;
   padding: 0.5rem 1rem;
   background-color: var(--secondary);
 }
