--- a/src/index.css
+++ b/src/index.css
@@ -103,9 +103,13 @@ header {
 }
 
 button {
-  background-color: transparent;
+  display: flex;
   margin-right: auto;
   margin-left: auto;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: stretch;
+  background-color: var(--bg-1);
 }
 
 div.logo-container {
@@ -227,10 +231,23 @@ div.logo-container a {
   background-repeat: no-repeat;
 }
 
+#search-detail {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  min-height: 30vh;
+  padding-bottom: 6em;
+  margin: 0 7%;
+}
+
 .card {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: space-between;
   cursor: pointer;
   width: 300px;
-  margin: 1rem auto;
+  margin: .1rem auto;
   background-color: var(--bg-1-1);
   position: relative;
   overflow: hidden;
@@ -238,22 +255,27 @@ div.logo-container a {
   box-shadow: rgba(0, 0, 0, 0.17) 0 -23px 25px 0 inset, rgba(0, 0, 0, 0.15) 0 -36px 30px 0 inset, rgba(0, 0, 0, 0.1) 0 -79px 40px 0 inset, rgba(0, 0, 0, 0.06) 0 2px 1px, rgba(0, 0, 0, 0.09) 0 4px 2px, rgba(0, 0, 0, 0.09) 0 8px 4px, rgba(0, 0, 0, 0.09) 0 16px 8px, #00000017 0 32px 16px;
 }
 
+.card-image {
+  width: 100%;
+  height: 450px;
+  box-sizing: border-box;
+  background-color: var(--bg-1);
+}
+
 .card-detail {
   color: var(--secondary);
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content:flex-start;
   letter-spacing: 0.5px;
-  padding: 1rem 0;
+  padding: 0;
   align-items: stretch;
 }
 
 .card-detail li:nth-last-child(2n) {
-  background-color: var(--bg-1-1);
   color: var(--bg-3);
   padding: 2px 1rem;
   width: 100%;
-  align-items: end;
 }
 
 .card-detail li:nth-last-child(2n + 1) {
@@ -426,15 +448,6 @@ footer span {
   #detail {
     position: relative;
     overflow-y: hidden;
-  }
-
-  #search-detail {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    min-height: 30vh;
-    padding-bottom: 6em;
-    margin: 0 7%;
   }
 
   .box-card,
